bugfix: hide overflow-y

--- a/frontend/css/booking.styl
+++ b/frontend/css/booking.styl
@@ -208,6 +208,7 @@ td.center
   z-index:1050
   margin-left:-280px
   outline:none
+  overflow-y: hidden
 
 .notCurrentMonth
   color:#e5e5e5
